# advanced_lane_finding

./: CMakeLists.txt  README.md
data/: calib.xml
include/: binarize.h  birdeye.h  calibrate.h  calibrator.h  coefficient.h  curvature.h  curve.h  detect.h  display.h  draw.h  generate.h  offset.h  radius.h  read.h  smoothen.h  translate.h
src/: binarize.h  birdeye.h  calibrate.cpp  calibrator.cpp  coefficient.h  detect.cpp  detect.h  display.cpp  draw.h  globals.h  main.cpp  offset.h  polyfit.h  smoothen.h
